# slang-python

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  build-package.sh  build.bat  new_features.md  pyproject.toml  slangpy.py
.github/workflows/: build.yml  publish.yml
examples/brdf-appearance-optimize-example/: BRDF.slang  images_source.txt  lightkernel.slang  slangpy.ipynb
examples/fwd-rasterizer-example/: README.md  out.cpp  rasterizer2d.py  rasterizer2d.slang
examples/hard-rasterizer-example/: README.md  hard-rasterizer2d.slang  rasterizer2d.py  test.py  unittest_bindings.slang
examples/inline-mlp-example/: README.md  cuda_matmul_prelude.cuh  image-model.slang  image_model.py  inline-mlp.slang  mlp_image_fit.py  mlp_image_test.py  mlp_image_test_derivs.py  out.cpp
examples/soft-rasterizer-example/: README.md  rasterizer2d.py  soft-rasterizer2d.slang
fwd-rasterizer-example/: rasterizer2d.py  rasterizer2d.slang
hard-rasterizer-example/: hard-rasterizer2d.slang  rasterizer2d.py  test.py  unittest_bindings.slang
slangpy/: __init__.py  slangpy.py
slangpy/util/: __init__.py  builtin_wrappers.py  compile.py  wrapper.py
soft-rasterizer-example/: rasterizer2d.py  rasterizer2d.slang  soft-rasterizer2d.slang
tests/: addarrays.slang  autobind-multiply-struct.slang  autobind-square-diff.slang  autobind-square.slang  cuda-intrinsic-binding.slang  cuda-intrinsic-test.cuh  import-module.slang  imported-module.slang  multiply.slang  multiply_template.slang  smoke.slang  test.py
util/: __init__.py
