[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slangpy"
version = "0.2.8"
dependencies = [
  "torch>=1.1.0",
  "hatchling>=1.11.0",
  "ninja"
]
authors = [
  { name="Slang Development Team" },
]
description = "A package for calling Slang modules from Python and PyTorch."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/shader-slang/slang"
"Bug Tracker" = "https://github.com/shader-slang/slang-python/issues"

[tool.hatch.build]
ignore-vcs = true
include = ["__init__.py", "slangpy.py", "bin/*"]
exclude = [".github/**", "tests/*.*", "build.bat", "build-package.sh", ".gitignore", "tmp/**"]
